# aac_ic

./: .cproject  .project  README.md  sdkconfig  sdkconfig.old
main/: .cproject  CMakeLists.txt  Kconfig.projbuild  main.c
main/driver/: i2c_adapter.c  main.c.example  rt903x.c
main/driver/rt903/: i2c_adapter.c  rt903x.c  rt903x_ram_play_demo.c  rt903x_stream_play_demo.c
main/driver/ucs10100/: example.c  ussys_tp_cap_calibration.c  ussys_tp_driver.c
main/include/: Algo1stParam.h  BrahmsFW_C.h  BrahmsShared.h  filesystem.h  i2c_adapter.h  ics_util.h  led_strip_encoder.h  ledcontrol.h  rt903x.h  rt903x_reg.h  touch_slider_service.h  ussys_tp_cap_calibration.h  ussys_tp_driver.h
main/services/: filesystem.c  led_strip_example_main.c  ledcontrol.c  touch_slider_service.c
main/src/: i2c_adapter.c  ics_util.c  rt903x.c  rt903x_ram_play_demo.c  rt903x_stream_play_demo.c
